// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers activityReducer should correctly changeFilter 1`] = `
Object {
  "filter": undefined,
  "filters": Array [
    Object {
      "key": "ALL_ACTIVITY",
      "name": "All",
    },
    Object {
      "key": "SENT_ACTIVITY",
      "name": "Sent",
    },
    Object {
      "key": "REQUESTED_ACTIVITY",
      "name": "Requested",
    },
    Object {
      "key": "PENDING_ACTIVITY",
      "name": "Pending",
    },
    Object {
      "key": "INTERNAL_ACTIVITY",
      "name": "Internal",
    },
  ],
  "modal": Object {
    "itemId": null,
    "itemType": null,
  },
  "searchActive": false,
  "searchText": "",
  "showExpiredRequests": false,
}
`;

exports[`reducers activityReducer should correctly hideActivityModal 1`] = `
Object {
  "filter": "ALL_ACTIVITY",
  "filters": Array [
    Object {
      "key": "ALL_ACTIVITY",
      "name": "All",
    },
    Object {
      "key": "SENT_ACTIVITY",
      "name": "Sent",
    },
    Object {
      "key": "REQUESTED_ACTIVITY",
      "name": "Requested",
    },
    Object {
      "key": "PENDING_ACTIVITY",
      "name": "Pending",
    },
    Object {
      "key": "INTERNAL_ACTIVITY",
      "name": "Internal",
    },
  ],
  "modal": Object {
    "itemId": null,
    "itemType": null,
  },
  "searchActive": false,
  "searchText": "",
  "showExpiredRequests": false,
}
`;

exports[`reducers activityReducer should correctly showActivityModal 1`] = `
Object {
  "filter": "ALL_ACTIVITY",
  "filters": Array [
    Object {
      "key": "ALL_ACTIVITY",
      "name": "All",
    },
    Object {
      "key": "SENT_ACTIVITY",
      "name": "Sent",
    },
    Object {
      "key": "REQUESTED_ACTIVITY",
      "name": "Requested",
    },
    Object {
      "key": "PENDING_ACTIVITY",
      "name": "Pending",
    },
    Object {
      "key": "INTERNAL_ACTIVITY",
      "name": "Internal",
    },
  ],
  "modal": Object {
    "itemId": undefined,
    "itemType": undefined,
  },
  "searchActive": false,
  "searchText": "",
  "showExpiredRequests": false,
}
`;

exports[`reducers activityReducer should correctly updateSearchActive 1`] = `
Object {
  "filter": "ALL_ACTIVITY",
  "filters": Array [
    Object {
      "key": "ALL_ACTIVITY",
      "name": "All",
    },
    Object {
      "key": "SENT_ACTIVITY",
      "name": "Sent",
    },
    Object {
      "key": "REQUESTED_ACTIVITY",
      "name": "Requested",
    },
    Object {
      "key": "PENDING_ACTIVITY",
      "name": "Pending",
    },
    Object {
      "key": "INTERNAL_ACTIVITY",
      "name": "Internal",
    },
  ],
  "modal": Object {
    "itemId": null,
    "itemType": null,
  },
  "searchActive": undefined,
  "searchText": "",
  "showExpiredRequests": false,
}
`;

exports[`reducers activityReducer should correctly updateSearchText 1`] = `
Object {
  "filter": "ALL_ACTIVITY",
  "filters": Array [
    Object {
      "key": "ALL_ACTIVITY",
      "name": "All",
    },
    Object {
      "key": "SENT_ACTIVITY",
      "name": "Sent",
    },
    Object {
      "key": "REQUESTED_ACTIVITY",
      "name": "Requested",
    },
    Object {
      "key": "PENDING_ACTIVITY",
      "name": "Pending",
    },
    Object {
      "key": "INTERNAL_ACTIVITY",
      "name": "Internal",
    },
  ],
  "modal": Object {
    "itemId": null,
    "itemType": null,
  },
  "searchActive": false,
  "searchText": undefined,
  "showExpiredRequests": false,
}
`;
